# sec_msg

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release.config.js
.devcontainer/: Dockerfile  check-git-config.sh  devcontainer.json  setup-gpg.sh
.devcontainer/.git-hooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yaml  feature_request.yaml
.github/workflows/: commit.yaml  format.yaml  lint.yaml  security.yaml  stale.yaml  test.yaml  versioning.yaml
docs/ADR/: 001-initial-architecture.md
src/: config.rs  error.rs  event.rs  main.rs  network.rs  protocol.rs  security.rs  ui.rs  utils.rs
