[package]
name = "sec_msg"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.45", features = ["tcp-tokio", "dns-tokio", "websocket", "tcp-tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
async-std = "1.12.0"
ncurses = "6.0.1"
log = "0.4.22"
env_logger = "0.11.3"
