[package]
name = "sec_msg"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.53.2", features = ["gossipsub", "floodsub", "mdns", "yamux", "tokio", "tcp", "tls", "dns", "plaintext", "websocket", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
async-std = "1.13.2"
log = "0.4.28"
env_logger = "0.11.4"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
